# rakarrack-haiku-32bit-hybrid

./: Makefile.in  PackageInfo32.tpl  PackageInfo64.tpl  configure  configure.ac  configure~  haiku.makefile  haiku_fixes.h  haiku_stubs.cpp  icon.rsrc  readme.md
X11/: dummy_xrandr.c  libXrandr.so.2
alsa/: asoundlib.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.in
doc/: Makefile.in
doc/help/: Makefile.in
doc/help/css/: Makefile.in
doc/help/imagenes/: Makefile.in
extra/: Makefile.in
haiku_native/: haiku-rakarrack.cpp
icons/: Makefile.in
jack/: jack.h
man/: Makefile.in
src/: APhaser.C  APhaser.h  Alienwah.C  Alienwah.h  AnalogFilter.C  AnalogFilter.h  Arpie.C  Arpie.h  Chorus.C  Chorus.h  CoilCrafter.C  CoilCrafter.h  CompBand.C  CompBand.h  Compressor.C  Compressor.h  Convolotron.C  Convolotron.h  Distorsion.C  Distorsion.h  Dual_Flange.C  Dual_Flange.h  DynamicFilter.C  DynamicFilter.h  EQ.C  EQ.h  Echo.C  Echo.h  Echotron.C  Echotron.h  Effect.h  EffectLFO.C  EffectLFO.h  Exciter.C  Exciter.h  Expander.C  Expander.h  FPreset.C  FPreset.h  Filter.C  (+93 more)
